--- a/templates/contact.html
+++ b/templates/contact.html
@@ -15,8 +15,8 @@
                                 <i class="fas fa-envelope fa-2x text-primary"></i>
                             </div>
                             <h3 class="h5 card-title">Email</h3>
-                            <p class="card-text">contact@example.com</p>
-                            <a href="mailto:contact@example.com" class="btn btn-sm btn-outline-primary">Send Email</a>
+                            <p class="card-text">guptapriyankas062@gmail.com</p>
+                            <a href="mailto:cguptapriyankas062@gmail.com" class="btn btn-sm btn-outline-primary">Send Email</a>
                         </div>
                     </div>
                 </div>
